--- a/multimedia/avidemux/Makefile
+++ b/multimedia/avidemux/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.39 2006/12/05 23:16:48 tron Exp $
+# $NetBSD: Makefile,v 1.40 2006/12/08 22:06:28 joerg Exp $
 #
 
 DISTNAME=	avidemux_2.3.0
@@ -16,7 +16,7 @@ GNU_CONFIGURE=		yes
 USE_LANGUAGES=		c c++
 USE_LIBTOOL=		yes
 USE_PKGLOCALEDIR=	yes
-USE_TOOLS+=		gmake perl pkg-config
+USE_TOOLS+=		gmake perl pkg-config msgfmt
 
 CPPFLAGS+=		-DDEVOSSAUDIO="\"${DEVOSSAUDIO}\""
 LIBS+=			${LIBOSSAUDIO}
