--- a/audio/festvox-tll/Makefile
+++ b/audio/festvox-tll/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2005/07/19 10:22:33 grant Exp $
+# $NetBSD: Makefile,v 1.18 2006/02/05 23:08:07 joerg Exp $
 
 DISTNAME=	voice_tll_di-2.0
 PKGNAME=	festvox-tll-2.0
@@ -6,7 +6,7 @@ PKGREVISION=	1
 CATEGORIES=	audio
 MASTER_SITES=	ftp://cslu.cse.ogi.edu/pub/tts/
 
-MAINTAINER=	proff@iq.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://cslu.cse.ogi.edu/tts/
 COMMENT=	American English female voice for the festival speech synthesis system
 
