--- a/audio/mbrola/Makefile
+++ b/audio/mbrola/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2006/02/05 23:08:11 joerg Exp $
+# $NetBSD: Makefile,v 1.12 2006/10/14 07:59:09 wiz Exp $
 
 DISTNAME=		mbr301h
 PKGNAME=		mbrola-301h
@@ -8,7 +8,7 @@ MASTER_SITES=		http://tcts.fpms.ac.be/synthesis/mbrola/bin/netbsd/ \
 			http://www.festvox.org/mbrola/bin/netbsd/
 EXTRACT_SUFX=		.zip
 
-MAINTAINER=		proff@iq.org
+MAINTAINER=		pkgsrc-users@NetBSD.org
 HOMEPAGE=		http://tcts.fpms.ac.be/synthesis/mbrola/
 COMMENT=		MBROLA diphone synthesizer executable
 
