--- a/databases/libpqxx/Makefile
+++ b/databases/libpqxx/Makefile
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.17 2006/02/05 23:08:32 joerg Exp $
+# $NetBSD: Makefile,v 1.18 2006/08/23 11:45:26 ghen Exp $
 #
 
 .include "../../databases/libpqxx/Makefile.common"
 
 COMMENT=		C++ interface to postgresql-lib
+PKGREVISION=		1
 
 NOT_FOR_PLATFORM=	NetBSD-*-pc532
 
