--- a/databases/p5-DBD-postgresql/Makefile
+++ b/databases/p5-DBD-postgresql/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.36 2006/02/05 23:08:33 joerg Exp $
+# $NetBSD: Makefile,v 1.37 2006/04/23 14:22:19 hiramatsu Exp $
 #
 
 VER=		1.48
 DISTNAME=	DBD-Pg-${VER}
 PKGNAME=	p5-DBD-postgresql-${VER}
 SVR4_PKGNAME=	p5dpo
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	databases perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=DBD/}
 
