--- a/databases/php-pgsql/Makefile
+++ b/databases/php-pgsql/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2006/06/02 18:27:55 joerg Exp $
+# $NetBSD: Makefile,v 1.8 2006/06/04 16:26:53 joerg Exp $
 
 MODNAME=		pgsql
+PKGREVISION=		1
 CATEGORIES+=		databases
 COMMENT=		PHP extension for PostgreSQL databases
 
