--- a/databases/ruby-DBD-postgresql/Makefile
+++ b/databases/ruby-DBD-postgresql/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.18 2006/03/04 21:29:11 jlam Exp $
+# $NetBSD: Makefile,v 1.19 2006/08/17 13:07:45 taca Exp $
 
 DISTNAME=	${RUBY_DBI_DISTNAME}
 PKGNAME=	${RUBY_PKGPREFIX}-DBD-postgresql-${RUBY_DBI_VERSION}
+PKGREVISION=	1
 CATEGORIES=	databases ruby
 MASTER_SITES=	${RUBY_DBI_MASTER_SITES}
 
