--- a/databases/slony1/Makefile
+++ b/databases/slony1/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2006/06/24 09:14:56 joerg Exp $
+# $NetBSD: Makefile,v 1.4 2006/10/18 18:53:03 adam Exp $
 
 DISTNAME=	slony1-1.2.0
+PKGREVISION=	1
 CATEGORIES=	databases
 MASTER_SITES=	http://pgfoundry.org/frs/download.php/1136/
 EXTRACT_SUFX=	.tar.bz2
