--- a/net/nagios-plugin-pgsql/Makefile
+++ b/net/nagios-plugin-pgsql/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.2 2006/03/04 21:30:20 jlam Exp $
+# $NetBSD: Makefile,v 1.3 2006/10/23 07:17:40 seb Exp $
 #
 
 PKGNAME=	nagios-plugin-pgsql-${PLUGINSVERSION}
+PKGREVISION=	1
 CATEGORIES=   	net sysutils databases
 
 MAINTAINER=     pkgsrc-users@NetBSD.org
