--- a/net/netsaint-plugins/Makefile
+++ b/net/netsaint-plugins/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.26 2006/02/19 16:47:15 wiz Exp $
+# $NetBSD: Makefile,v 1.27 2006/03/04 21:30:21 jlam Exp $
 #
 
 DISTNAME=		netsaint-plugins-1.2.9-4
 PKGNAME=		netsaint-plugins-1.2.9.4
-PKGREVISION=		10
+PKGREVISION=		11
 CATEGORIES=		net
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=netsaintplug/}
 
