--- a/print/Makefile
+++ b/print/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.163 2006/12/06 00:49:24 wiz Exp $
+# $NetBSD: Makefile,v 1.164 2006/12/27 17:40:50 joerg Exp $
 #
 
 COMMENT=	Desktop publishing
@@ -36,9 +36,7 @@ SUBDIR+=	foomatic-filters-cups
 SUBDIR+=	foomatic-ppds
 SUBDIR+=	foomatic-ppds-cups
 SUBDIR+=	ghostscript
-SUBDIR+=	ghostscript-afpl
 SUBDIR+=	ghostscript-esp
-SUBDIR+=	ghostscript-gnu
 SUBDIR+=	ghostscript6
 SUBDIR+=	gimp-print
 SUBDIR+=	gimp-print-cups
