--- a/print/lilypond/Makefile
+++ b/print/lilypond/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.48 2006/09/09 02:46:08 obache Exp $
+# $NetBSD: Makefile,v 1.49 2006/09/11 08:33:11 joerg Exp $
 #
 
-DISTNAME=	lilypond-2.4.3
-PKGREVISION=	5
+DISTNAME=	lilypond-2.4.6
 CATEGORIES=	print
 MASTER_SITES=	http://lilypond.org/download/v2.4/
 
