--- a/net/nslint/Makefile
+++ b/net/nslint/Makefile
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.4 2005/12/27 13:54:58 seb Exp $
+# $NetBSD: Makefile,v 1.5 2006/03/04 21:30:21 jlam Exp $
 #
 
 DISTNAME=	nslint-2.0.2
 CATEGORIES=	net
-MASTER_SITES=	ftp://ftp.ee.lbl.gov/
+MASTER_SITES=	ftp://ftp.ee.lbl.gov/ \
+		ftp://ftp.ee.lbl.gov/old/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://ee.lbl.gov/ftp.html
