--- a/mail/Makefile
+++ b/mail/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.298 2006/10/24 10:47:16 cube Exp $
+# $NetBSD: Makefile,v 1.299 2006/11/07 21:01:59 kristerw Exp $
 #
 
 COMMENT=	Electronic mail utilities
@@ -62,6 +62,7 @@ SUBDIR+=	gld
 SUBDIR+=	gmime
 SUBDIR+=	gnus
 SUBDIR+=	gotmail
+SUBDIR+=	greetdelay
 SUBDIR+=	grepmail
 SUBDIR+=	hypermail
 SUBDIR+=	ifile
