--- a/lang/clisp/Makefile
+++ b/lang/clisp/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.57 2006/08/07 15:55:31 perry Exp $
+# $NetBSD: Makefile,v 1.58 2006/10/22 21:32:57 rillig Exp $
 
 DISTNAME=	clisp-2.39
+PKGREVISION=	1
 CATEGORIES=	lang
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=clisp/}
 EXTRACT_SUFX=	.tar.bz2
