--- a/x11/wxGTK/Makefile.common
+++ b/x11/wxGTK/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.11 2006/07/16 00:53:01 rillig Exp $
+# $NetBSD: Makefile.common,v 1.12 2006/12/05 08:30:20 joerg Exp $
 #
 
 DISTNAME=		wxGTK-2.6.3
@@ -14,6 +14,8 @@ DISTINFO_FILE=		${.CURDIR}/../../x11/wxGTK/distinfo
 
 PATCHFILES=		${DISTNAME}-libtool.diff2.bz2
 PATCH_SITES=		${MASTER_SITE_LOCAL}
+
+PKG_DESTDIR_SUPPORT=	user-destdir
 
 USE_TOOLS+=		pkg-config msgfmt
 USE_LIBTOOL=		yes
@@ -54,4 +56,3 @@ USE_TOOLS+=		gawk:pkgsrc
 .include "../../x11/gtk2/buildlink3.mk"
 
 .include "../../mk/pthread.buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
