--- a/databases/nss_ldap/Makefile
+++ b/databases/nss_ldap/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2006/08/10 11:53:08 hira Exp $
+# $NetBSD: Makefile,v 1.14 2006/09/21 18:06:18 drochner Exp $
 #
 
 DISTNAME=		nss_ldap-240
@@ -19,6 +19,7 @@ USE_TOOLS+=		gmake
 CONFIGURE_ARGS+= --with-ldap-conf-file=${PKG_SYSCONFDIR}/nss_ldap.conf
 CONFIGURE_ARGS+= --with-ldap-secret-file=${PKG_SYSCONFDIR}/nss_ldap.secret
 CONFIGURE_ARGS+= --sysconfdir=${PKG_SYSCONFDIR:Q}
+MAKE_FLAGS+=		INST_UID=${BINOWN} INST_GID=${BINGRP}
 
 EGDIR=			${PREFIX}/share/examples/${PKGBASE}
 INSTALL_MAKE_FLAGS=	${MAKE_FLAGS} sysconfdir=${EGDIR}
