--- a/converters/skf/Makefile
+++ b/converters/skf/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.5 2006/08/24 15:45:05 taca Exp $
+# $NetBSD: Makefile,v 1.6 2006/10/01 15:09:15 obache Exp $
 
-DISTNAME=	skf_1.94.0
-PKGNAME=	skf-1.94.0
+DISTNAME=	skf_1.94.5
+PKGNAME=	skf-1.94.5
 CATEGORIES=	japanese converters
-MASTER_SITES=	${MASTER_SITE_SOURCEFORGE_JP:=skf/22014/}
+MASTER_SITES=	${MASTER_SITE_SOURCEFORGE_JP:=skf/23131/}
 
 MAINTAINER=	obata@lins.jp
 HOMEPAGE=	http://sourceforge.jp/projects/skf/
