--- a/sysutils/estd/Makefile
+++ b/sysutils/estd/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.10 2006/09/20 07:19:59 rillig Exp $
+# $NetBSD: Makefile,v 1.11 2006/11/03 19:15:45 joerg Exp $
 
 DISTNAME=	estd-r5
 PKGNAME=	estd-0.5
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	sysutils
 MASTER_SITES=	http://www.elektro-eel.org/
 
