--- a/net/libpcap/Makefile
+++ b/net/libpcap/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.33 2006/02/24 22:53:41 drochner Exp $
+# $NetBSD: Makefile,v 1.34 2006/03/04 21:30:20 jlam Exp $
 
-DISTNAME=		libpcap-0.9.4
-PKGREVISION=		1
+DISTNAME=		libpcap-0.9.5
 SVR4_PKGNAME=		lpcap
 CATEGORIES=		net
 MASTER_SITES= 		http://www.tcpdump.org/release/
