--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.341 2006/11/17 15:50:47 obache Exp $
+# $NetBSD: Makefile,v 1.342 2006/11/18 00:48:03 kristerw Exp $
 #
 
 COMMENT=	Text processing utilities (does not include desktop publishing)
@@ -258,6 +258,7 @@ SUBDIR+=	py-FourSuite
 SUBDIR+=	py-HappyDoc
 SUBDIR+=	py-Reverend
 SUBDIR+=	py-SimpleParse
+SUBDIR+=	py-X
 SUBDIR+=	py-cmTemplate
 SUBDIR+=	py-csv
 SUBDIR+=	py-docutils
