--- a/net/poink/Makefile
+++ b/net/poink/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2005/06/17 03:50:27 jlam Exp $
+# $NetBSD: Makefile,v 1.9 2006/04/22 09:22:12 rillig Exp $
 #
 
 DISTNAME=	poink-1.6
@@ -16,4 +16,5 @@ do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/poink ${PREFIX}/bin
 	${INSTALL_MAN} ${WRKSRC}/ping.1 ${PREFIX}/man/man1/poink.1
 
+.include "../../devel/libgetopt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
