--- a/net/mping/Makefile
+++ b/net/mping/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2006/09/07 10:06:26 rillig Exp $
 
 DISTNAME=	mping-2.01
 CATEGORIES=	net
@@ -15,4 +15,9 @@ do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/src/mping ${PREFIX}/sbin/mping
 	${INSTALL_MAN} ${WRKSRC}/man/mping.8 ${PREFIX}/${PKGMANDIR}/man8
 
+PKG_OPTIONS_VAR=		PKG_OPTIONS.mping
+PKG_OPTIONS_REQUIRED_GROUPS=	inet6 # require inet6 capability
+PKG_OPTIONS_GROUP.inet6=	inet6
+
+.include "../../mk/bsd.options.mk"
 .include "../../mk/bsd.pkg.mk"
