--- a/graphics/png/Makefile
+++ b/graphics/png/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.85 2006/11/28 21:58:17 drochner Exp $
+# $NetBSD: Makefile,v 1.86 2006/11/30 10:58:17 drochner Exp $
 
 DISTNAME=	libpng-1.2.14
 PKGNAME=	${DISTNAME:S/lib//}
+PKGREVISION=	1
 # temporary, distfile was changed after release
 DIST_SUBDIR=	libpng-1.2.14-20061130
 CATEGORIES=	graphics
