--- a/sysutils/bacula/Makefile.common
+++ b/sysutils/bacula/Makefile.common
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile.common,v 1.32 2006/07/22 04:46:18 rillig Exp $
+# $NetBSD: Makefile.common,v 1.33 2006/10/09 14:20:28 ghen Exp $
 
-DISTNAME=		bacula-1.38.11
+DISTNAME=		bacula-2.0.0
 CATEGORIES=		sysutils
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=bacula/}
 
-MAINTAINER=		ghen@NetBSD.org
+MAINTAINER=		pkgsrc-users@NetBSD.org
 HOMEPAGE=		http://www.bacula.org/
 COMMENT?=		The Network Backup Solution
 
