--- a/math/glpk/Makefile
+++ b/math/glpk/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.10 2006/02/05 23:10:02 joerg Exp $
+# $NetBSD: Makefile,v 1.11 2006/05/23 10:17:20 adam Exp $
 
-DISTNAME=	glpk-4.10
+DISTNAME=	glpk-4.13
 CATEGORIES=	math
 MASTER_SITES=	ftp://ftp.gnu.org/gnu/glpk/
 
@@ -12,4 +12,5 @@ USE_LIBTOOL=		yes
 USE_TOOLS+=		gmake
 GNU_CONFIGURE=		yes
 
+.include "../../devel/gmp/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
