--- a/multimedia/Makefile
+++ b/multimedia/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.100 2006/12/05 15:15:50 wiz Exp $
+# $NetBSD: Makefile,v 1.101 2006/12/06 18:31:35 xtraeme Exp $
 #
 
 COMMENT=	Multimedia utilities
@@ -26,6 +26,7 @@ SUBDIR+=	gnome2-media
 SUBDIR+=	gopchop
 SUBDIR+=	gst-plugins0.10-bad
 SUBDIR+=	gst-plugins0.10-base
+SUBDIR+=	gst-plugins0.10-dvdread
 SUBDIR+=	gst-plugins0.10-ffmpeg
 SUBDIR+=	gst-plugins0.10-good
 SUBDIR+=	gst-plugins0.10-mpeg2dec
