--- a/sysutils/amanda-common/Makefile.common
+++ b/sysutils/amanda-common/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.22 2006/07/19 19:14:39 jlam Exp $
+# $NetBSD: Makefile.common,v 1.23 2006/10/02 21:05:44 rillig Exp $
 #
 # common make file fragment shared by all amanda-* pkgs.
 #
@@ -6,7 +6,7 @@
 VERS=			2.4.4p4
 DISTNAME?=		amanda-${VERS}
 CATEGORIES=		sysutils
-MASTER_SITES?=		http://download.sourceforge.net/amanda/
+MASTER_SITES?=		${MASTER_SITE_SOURCEFORGE:=amanda/}
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
 HOMEPAGE=		http://www.amanda.org/
