--- a/wm/flwm/Makefile
+++ b/wm/flwm/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.20 2006/03/04 21:30:54 jlam Exp $
+# $NetBSD: Makefile,v 1.21 2006/05/15 22:48:35 joerg Exp $
 #
 
-DISTNAME=	flwm-1.00
-PKGREVISION=	3
+DISTNAME=	flwm-1.02
 CATEGORIES=	x11 wm
 MASTER_SITES=	http://flwm.sourceforge.net/
 EXTRACT_SUFX=	.tgz
